crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/lint_vue_ts_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.vue
```

## `file.vue`

```vue
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:5:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    3 │ delete a.c;
    4 │ 
  > 5 │ var foo: string = "";
      │     ^^^
    6 │ </script>
    7 │ <template></template>
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    2 2 │   delete a.c;
    3 3 │   
    4   │ - var·foo:·string·=·"";
      4 │ + var·_foo:·string·=·"";
    5 5 │   
  

```

```block
file.vue:2:3 lint/suspicious/noDoubleEquals  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Using == may be unsafe if you are relying on type coercion.
  
    1 │ <script setup lang="ts">
  > 2 │ a == b;
      │   ^^
    3 │ delete a.c;
    4 │ 
  
  i == is only allowed when comparing against null.
  
  i Unsafe fix: Use === instead.
  
    1 │ a·===·b;
      │     +   

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
